-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.5.0-rc1
-
Windows
In CMake projects, the locator finds directories, but it is not able to open them on double click.
By the way, the pop up message also triggers https://bugreports.qt.io/browse/QTCREATORBUG-18863
For Gerrit Dashboard: QTCREATORBUG-19346 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
212201,2 | CMake: Hide nodes from project list | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |